2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: External links doesn't have to contain www.

2009-10-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* index.aspx: Remove dead code.

	* index.aspx.cs:
	* ViewTable.aspx.cs:
	* EditLane.aspx:
	* EditLane.aspx.cs:
	* EditLane.aspx.designer.cs: Add GIT support.

2009-10-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Don't transform links to external images.

2009-09-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Admin.cs:
	* Admin.aspx.cs:
	* Admin.aspx.designer.cs: Show the current status of the
	scheduler/deletion directives commands (executing or not).

2009-09-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* index.aspx:
	* index.aspx.cs:
	* index.aspx.designer.cs: Implement selection of multiple lanes instead
	of only one lane, and persist the selected lanes with cookies.

	* Master.master.cs: Now that we store the selected lanes in the cookies
	we need a way to show all the lanes - update the 'All' link.

	* SelectLanes.aspx:
	* SelectLanes.aspx.cs:
	* SelectLanes.aspx.designer.cs: Added. Used to select the lanes to show
	on the front page.

2009-09-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* index.aspx.cs: Remove some dead code.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditHost.aspx: Updated with new queue management options.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.aspx.cs: Correctly load the parent lane.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLanes.aspx.cs:
	* EditHosts.aspx.cs: Redirect to the confirmation page instead of
	deleting.

	* Delete.aspx:
	* Delete.aspx.cs:
	* Delete.aspx.designer.cs: Added, confirmation page before doing
	extensive deletes.

	* MonkeyWrench.Web.UI.csproj: Updated.

2009-09-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditHost.aspx:
	* EditHost.aspx.cs: Add support for setting the password for a host,