@@ -1,5 +1,9 @@
 2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* ViewHtmlReport.aspx.cs: Add some logging for unexpected exceptions.
+
+2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* ViewHtmlReport.aspx.cs: External links doesn't have to contain www.
 
 2009-10-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>
